# swe-projects

blockchain/: README.md
blockchain/eth/mev/: README.md
blockchain/mev/: README.md
blockchain/mev/v1/: README.md
blockchain/sol/blockchain-transaction-calc-main/v1/solana/compute/rust/: Cargo.toml  Dockerfile  build.rs
blockchain/sol/blockchain-transaction-calc-main/v1/solana/compute/rust/src/: breakeven.rs  compute.rs  error.rs  ev.rs  fee.rs  freshness.rs  lib.rs  main.rs  proto.rs  quote.rs  risk.rs  route_scoring.rs  service.rs  slippage.rs  source_truth.rs  types.rs
blockchain/sol/blockchain-transaction-calc-main/v1/solana/compute/rust/tests/: state_machine.rs
erlang parallel patterns/v0/: README.md
erlang parallel patterns/v1/: MEASUREMENT_PLAN.md  README.md
practice/study/graph-theory/: WrathOfMath.md
practice/study/networking/: DeepFundamentals.ChatGPT.md
practice/system-design/: cloud-storage.excalidraw  twitter.excalidraw  uber.excalidraw
workflow-engine/: .dockerignore  Dockerfile  MIGRATIONS.md  README.md  V2_OPLAN.md  docker-compose.yml  package-lock.json  package.json  tsconfig.json
workflow-engine/compose/: Caddyfile  otel-collector-config.yaml
workflow-engine/docs/: tests.md  v1.md  v2.md  v3.md
workflow-engine/examples/: adversarial-guardbomb.inputs.jsonl  adversarial-guardbomb.spec.json  adversarial-selfloop.inputs.jsonl  adversarial-selfloop.spec.json  normal.inputs.jsonl  normal.spec.json  order.inputs.jsonl  order.spec.json  tricky.inputs.jsonl  tricky.spec.json
workflow-engine/src/: index.ts  tracing.ts
(+345 files in other folders)
